@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>A PenhaS precisa da tua autorização para enviar a tua localização a(o)s guardiã(o)s quando o botão de Alerta for acionado.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>A PenhaS precisa da tua autorização para enviar a tua localização a(o)s guardiã(o)s quando o botão de Alerta for acionado.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
