@@ -218,3 +218,10 @@ const kTextStyleAlertDialogDescription = TextStyle(
     letterSpacing: 0.45,
     color: DesignSystemColors.darkIndigoThree,
     fontWeight: FontWeight.normal);
+
+const kTextStyleAlertDialogDescriptionBold = TextStyle(
+    fontFamily: 'Lato',
+    fontSize: 14.0,
+    letterSpacing: 0.45,
+    color: DesignSystemColors.darkIndigoThree,
+    fontWeight: FontWeight.bold);
