@@ -43,6 +43,7 @@ dependencies:
   firebase_core: ^0.4.5
   firebase_crashlytics: ^0.1.3+3
   freezed_annotation: ^0.11.0
+  location: ^3.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
